[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/games/SuperShadeBros2/Flag.png" type="Texture2D" id=1]
[ext_resource path="res://scenes/games/SuperShadeBros2/Flagpole.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/games/SuperShadeBros2/Flag.gd" type="Script" id=3]
[ext_resource path="res://scenes/games/SuperShadeBros2/ShadeBro.png" type="Texture2D" id=4]
[ext_resource path="res://scenes/games/SuperShadeBros2/Flash.png" type="Texture2D" id=5]
[ext_resource path="res://assets/theme/MinimalUI/monogram-extended.ttf" type="FontFile" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Finish"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flag:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0.1, 1.1, 7 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -129 ), Vector2( -16, -129 ), Vector2( -16, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghost:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.1, 1.1, 7, 7.4, 7.8, 8.2, 9.5, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -20, -129 ), Vector2( 20, -129 ), Vector2( 20, 113 ), Vector2( 42.5, 100.5 ), Vector2( 65, 128 ), Vector2( 65, 128 ), Vector2( 200, 128 ), Vector2( 200, 65 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ghost:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0.1, 7.8, 8 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 10 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 200, 65 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 9.9, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ghost:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CamPos/Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0, 10 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flag:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( -16, -129 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghost:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( -20, -129 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ghost:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 200, 65 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ghost:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CamPos/Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 16, 160 )

[sub_resource type="FontFile" id=6]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Flag" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Pole" type="Sprite2D" parent="."]
texture = ExtResource( 2 )

[node name="Flag" type="Sprite2D" parent="."]
position = Vector2( -16, -129 )
texture = ExtResource( 1 )

[node name="Ghost" type="Sprite2D" parent="."]
visible = false
position = Vector2( -20, -129 )
texture = ExtResource( 4 )

[node name="Flash" type="Sprite2D" parent="."]
visible = false
position = Vector2( 200, 65 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Finish = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="FlagArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagArea"]
shape = SubResource( 3 )

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2( -20, -129 )

[node name="Tween" type="Tween" parent="."]

[node name="CamPos" type="Marker2D" parent="."]
position = Vector2( 100, 0 )

[node name="Label" type="Label" parent="CamPos"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -31.0
offset_right = 196.0
offset_bottom = 31.0
custom_fonts/font = SubResource( 6 )
text = "Game Complete!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="FlagArea" to="." method="_on_FlagArea_area_entered"]
[connection signal="finished" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
